--- a/common.css
+++ b/common.css
@@ -1,5 +1,5 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-@import "fonts.css";
+@import url("fonts.css");
 /*
 @import "variables.css";
 @import "tooltip.css";
