--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,12 +1,12 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-@import "fonts.css";
 @import "variables.css";
 @import "tooltip.css";
 @import "dialog.css";
 @import "footer.css";
 @import "gallery.css";
 @import "inputs.css";
-
+/*@import "fonts.css";
+*/
 html[data-transition],
 html[data-transition] *,
 html[data-transition] input::file-selector-button,
