--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,6 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-@import "./fonts.css";
-@import "./variables.css";
+@import url("./fonts.css");
+@import url("./variables.css");
 @import "./tooltip.css";
 @import "./dialog.css";
 @import "./footer.css";
